# nixflake-cppfront

./: .gitattributes  README.md  cppfront.nix  flake.nix  hellocpp2.nix
example_hw/: default.nix
example_hw_qt/: CMakeLists.txt  default.nix  hello.cpp2
src/: hello.cpp2
